package sample.dto;

import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;


@Getter
@NoArgsConstructor
@Setter
public class SimulationResponse {
    //Todo Map<CarId,List<NodeId>> tak czy tak
    //public Map<String, NodePosition> response;
}
