@startuml

title __DTO's Class Diagram__\n

  package sample {
    package sample.dto {
      class BoardDto {
          - boardName : String
          - nodeDtos : Set<NodeDto>
          - BoardDto()
          + BoardDto()
          {static} + of()
          + getBoardName()
          + getNodeDtos()
          + setBoardName()
          + setNodeDtos()
      }
    }
  }
  

  package sample {
    package sample.dto {
      class GetSavedBoardResponse {
          - GetSavedBoardResponse()
          + GetSavedBoardResponse()
          {static} + of()
          + getBoardDto()
          + setBoardDto()
      }
    }
  }
  

  package sample {
    package sample.dto {
      class NodeDto {
          - leftId : String
          - rightId : String
          - topId : String
          - bottomId : String
          - spawnStreamId : String
          - maxSpeedAllowed : Double
          - verticalPosition : Double
          - horizontalPosition : Double
          - nodeId : String
          + NodeDto()
          + NodeDto()
          {static} + builder()
          + getNodeType()
          + getDirection()
          + getLeftId()
          + getRightId()
          + getTopId()
          + getBottomId()
          + getSpawnStreamId()
          + getMaxSpeedAllowed()
          + getVerticalPosition()
          + getHorizontalPosition()
          + getNodeId()
          + setNodeType()
          + setDirection()
          + setLeftId()
          + setRightId()
          + setTopId()
          + setBottomId()
          + setSpawnStreamId()
          + setMaxSpeedAllowed()
          + setVerticalPosition()
          + setHorizontalPosition()
          + setNodeId()
      }
    }
  }
  

  package sample {
    package sample.dto {
      class NodeDtoBuilder {
          - leftId : String
          - rightId : String
          - topId : String
          - bottomId : String
          - spawnStreamId : String
          - maxSpeedAllowed : Double
          - verticalPosition : Double
          - horizontalPosition : Double
          - nodeId : String
          ~ NodeDtoBuilder()
          + nodeType()
          + direction()
          + leftId()
          + rightId()
          + topId()
          + bottomId()
          + spawnStreamId()
          + maxSpeedAllowed()
          + verticalPosition()
          + horizontalPosition()
          + nodeId()
          + build()
          + toString()
      }
    }
  }
  

  package sample {
    package sample.dto {
      class SaveBoardRequest {
          + SaveBoardRequest()
          + getBoardDto()
          + setBoardDto()
      }
    }
  }
  

  package sample {
    package sample.dto {
      class SimulationInfo {
          - streamProduction : Map<SpawnStreamId, Integer>
          - simulationSpeed : Integer
          - SimulationInfo()
          {static} + of()
          + getStreamProduction()
          + getSimulationSpeed()
      }
    }
  }
  

  package sample {
    package sample.dto {
      class SimulationResponse {
          + SimulationResponse()
      }
    }
  }
  

  GetSavedBoardResponse o-- BoardDto : boardDto
  NodeDto o-- NodeType : nodeType
  NodeDto o-- NodeDirection : direction
  NodeDto +-down- NodeDtoBuilder
  NodeDtoBuilder o-- NodeType : nodeType
  NodeDtoBuilder o-- NodeDirection : direction
  SaveBoardRequest o-- BoardDto : boardDto


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
